# Async_API_sprint_2__team

./: .env.example  .env.test  README.md  docker-compose.test.yml  docker-compose.yml  pyproject.toml
app/: main.py  pyproject.toml
app/src/api/v1/: films.py  genres.py  pagination.py  persons.py  search.py
app/src/core/: backoff.py  cache.py  cache_key_generator.py  cache_serializer.py  cache_storage.py  config.py  database.py  default_cache_key_generator.py  logger.py  redis_cache_storage.py
app/src/db/: elastic.py
app/src/models/: base.py  film.py  genre.py  person.py
app/src/repositories/: base.py  elastic_repository.py  film_repository.py  genre_repository.py  person_repository.py
app/src/services/: __init__.py  base.py  factory.py  film.py  genre.py  interfaces.py  person.py
app/tests/: conftest.py  test_films.py  test_genres.py  test_persons.py  test_search.py
docker/admin/: Dockerfile  entrypoint.sh
docker/api/: Dockerfile  Dockerfile.test
docker/etl/: Dockerfile
docker/nginx/conf.d/: default.conf
docker/tests/: Dockerfile.test
etl_service/: main.py  pyproject.toml  settings.py
etl_service/documents/: genre.py  movie.py  person.py
etl_service/helpers/: backoff_func_wrapper.py
etl_service/interfaces/: __init__.py  elasticsearch_interface.py  index_manager_interface.py
etl_service/services/: __init__.py  elasticsearch_index_manager.py  elasticsearch_service.py
etl_service/state_manager/: base_storage.py  state_manager.py
movies_admin/: pyproject.toml
movies_admin/config/: settings.py
