[tool.poetry]
name = "postgres-to-es"
version = "0.1.0"
description = ""
authors = ["dfnsff <dfnsff@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.19"
filelock = "3.13.1"
pydantic-settings = "2.2.1"
psycopg = { version = "3.1.18", extras = ["binary"] }
elasticsearch-dsl = "8.12.0"
pytz = "2024.1"
pydantic = "2.6.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
